--- a/NewFrontend/app/src/scss/_colors.scss
+++ b/NewFrontend/app/src/scss/_colors.scss
@@ -31,9 +31,9 @@ $primary-colors: (
 }
 
 $colors: (
-  primary-dk: $oc-blue-9,
-  primary: $oc-blue-8,
-  primary-lt: $oc-blue-7,
+  primary-dk: $oc-teal-9,
+  primary: $oc-teal-8,
+  primary-lt: $oc-teal-7,
   primary-text: $oc-gray-0,
 
   gray-dk: $oc-gray-9,
