--- a/NewFrontend/app/src/scss/app.scss
+++ b/NewFrontend/app/src/scss/app.scss
@@ -35,7 +35,7 @@
   overflow: show;
   margin: auto;
   top: 0;
-  left: 0;
+  left: 6rem;
   right: 0;
   bottom: 0;
 
@@ -48,7 +48,7 @@
     display: block;
     position: fixed;
     top: 0;
-    left: 0;
+    left: 12rem;
     width: 100%;
     height: 100%;
     background-color: color(gray-dk);
